@startuml
package "com.dip.exercise" {
    class EncodingModule {
        +encodeWithFiles(): void
        +encodeBasedOnNetworkAndDatabase(): void
    }

    class EncodingModuleClient {
        +main(args: String[]): void
    }

    class MyDatabase {
        -_data: Map<Integer, String>
        -_count: int
        +write(inputString: String): int
    }
}

EncodingModuleClient --> EncodingModule
EncodingModule --> MyDatabase

@enduml
